--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </h1>
                 <p>
                     A confirmation email has been sent to
-                    <b>ash@loremcompany.com.</b>
+                    <b id="mail"></b>
                     Please open it and click the button inside to confirm your
                     subscription.
                 </p>
